--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -107,7 +107,7 @@
     "authenticate": "Authentifizieren",
     "authentication": "Authentifizierung",
     "authentication_text": "Du kannst Dich über einen der untenstehenden Dienste authentifizieren. Im Anschluss bitten wir Dich, einige persönliche Daten einzugeben.",
-    "authentication_text_green": "Beim letzten Mal hast Du Dich mit dem hervorgehobenen Provider angemeldet:",
+    "authentication_text_green": "Beim letzten Mal hast Du Dich mit der hervorgehobenen Methode angemeldet:",
     "change_password": "Passwort ändern / anlegen",
     "error": "Authentifizierungsproblem",
     "error_text": [
