--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -113,7 +113,7 @@
     "authenticate": "Authenticate",
     "authentication": "Authentication",
     "authentication_text": "You can authenticate via one of the methods given below. Subsequently, we ask you to provide some personal data.",
-    "authentication_text_green": "Last time you have been authenticated by the highlighted provider:",
+    "authentication_text_green": "Last time you have been authenticated via the highlighted method:",
     "change_password": "Change or init password",
     "error": "Authentication Error",
     "error_text": [
