Reorder and rename group contact options

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -260,7 +260,8 @@
   "groups": {
     "contact": "Ansprechpartner",
     "contacts": "Ansprechpartner",
-    "contact_the_organizers": "Ansprechpartner kontaktieren",
+    "contact_the_organizers": "Kontaktieren",
+    "contactTheOrganizers_label": "Gäste können Ansprechpartner kontaktieren",
     "create": "Gruppe anlegen",
     "edit": "Gruppe \"{{groupId}}\" bearbeiten",
     "email_prefix": "Präfix für E-Mail-Subjects",
@@ -269,10 +270,10 @@
     "has": "Diese Gruppe hat",
     "join": "Gruppe beitreten",
     "leave": "Gruppe verlassen",
+    "mailinglist": "Gruppen-Mailingliste",
     "map_label": "Label in Karte",
     "meetup_clone_title": "Kopiert existierende Events von Meetup.",
     "meetupURL_label": "Meetup-URL (falls für diese Gruppe erforderlich)",
-    "contactTheOrganizers_label": "Gäste können Ansprechpartner kontaktieren",
     "more": "mehr lesen…",
     "new": "Neue Gruppe",
     "other": "Andere",
