--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -269,7 +269,8 @@
   "groups": {
     "contact": "Contact person",
     "contacts": "Contact persons",
-    "contact_the_organizers": "Contact the organizers",
+    "contact_the_organizers": "Contact",
+    "contactTheOrganizers_label": "Guests can reach out to contact persons",
     "create": "Create group",
     "edit": "Edit group \"{{groupId}}\"",
     "email_prefix": "Prefix for e-mail-subjects",
@@ -278,8 +279,8 @@
     "has": "This group has",
     "join": "Join Group",
     "leave": "Leave Group",
+    "mailinglist": "Group mailinglist",
     "map_label": "Label in map",
-    "contactTheOrganizers_label": "Guests can reach out to contact persons",
     "more": "read more…",
     "new": "New Group",
     "other": "Others",
