--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -294,7 +294,7 @@
       "title": "Name of the group used in the website, also realname for e-mails sent by the group",
       "x_coord": "Horizontal position on the map",
       "y_coord": "Vertical position on the map",
-      "mail_the_contact_persons": "An e-mail button is displayed on the group page, which can be used to write to the contact persons."
+      "mail_the_contact_persons": "An e-mail button is displayed on the group page. It can be used to write to the contact persons."
     },
     "type": "Group type",
     "x_coord": "X-coord.",
