--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -292,13 +292,13 @@
       "map_label": "Label that is displayed in the map",
       "name": "The e-mail address \"@softwerkskammer.org\" where the group can be reached.",
       "title": "Name of the group used in the website, also realname for e-mails sent by the group",
-      "x_coord": "Horizontal position on the map",
-      "y_coord": "Vertical position on the map",
+      "x_coord": "Longitude for the position on the map",
+      "y_coord": "Latitude for the position on the map",
       "mail_the_contact_persons": "An e-mail button is displayed on the group page. It can be used to write to the contact persons."
     },
     "type": "Group type",
-    "x_coord": "X-coord.",
-    "y_coord": "Y-coord."
+    "x_coord": "Longitude",
+    "y_coord": "Latitude"
   },
   "mailsender": {
     "contact_the_organizers_disabled": "The feature \"E-mail to the contact persons\" is disabled.",
