--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -270,6 +270,7 @@
     "contact": "Contact person",
     "contacts": "Contact persons",
     "mail_the_contact_persons": "E-mail to the contact persons",
+    "mail_to_group": "E-Mail to all members of the group",
     "create": "Create group",
     "edit": "Edit group \"{{groupId}}\"",
     "email_prefix": "Prefix for e-mail-subjects",
@@ -320,6 +321,7 @@
     "send": "Send",
     "subject": "Subject",
     "to_member": "To member",
+    "to_group": "To group",
     "to_contact_persons": "To contact persons of group",
     "to_participants": "only to the activity's participants (not to groups)",
     "why-resign": "Why do you want to resign",
