deps bump / fix i18n

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -15,8 +15,8 @@
     "blog_entry": "Blogartikel zur Aktivität",
     "cloned_from_meetup_text": "Diese Aktivität wurde von Meetup kopiert. Einige Informationen kannst Du daher nur auf Meetup bearbeiten. Deine Änderungen werden zeitnah hierhin übertragen.",
     "count": "Anzahl",
-    "count_participants_interval": "(0){Bislang gibt es keine Teilnahmezusagen.};(1){Bislang hat ein Mitglied seine Teilnahme zugesagt.};(2-inf){Bislang haben {{count}} Mitglieder ihre Teilnahme zugesagt.}",
-    "count_participants_meetup_interval": "(0){Woanders gibt es keine Anmeldungen.};(1){Woanders gibt es eine Anmeldung.};(2-inf){Woanders gibt es {{count}} Anmeldungen.}",
+    "count_participants_interval": "(0)[Bislang gibt es keine Teilnahmezusagen.];(1)[Bislang hat ein Mitglied seine Teilnahme zugesagt.];(2-inf)[Bislang haben {{count}} Mitglieder ihre Teilnahme zugesagt.]",
+    "count_participants_meetup_interval": "(0)[Woanders gibt es keine Anmeldungen.];(1)[Woanders gibt es eine Anmeldung.];(2-inf)[Woanders gibt es {{count}} Anmeldungen.]",
     "create": "Aktivität anlegen",
     "created_by": "Angelegt von",
     "delete": "Aktivität löschen",
@@ -232,7 +232,7 @@
     "legal_notice": "Impressum und Datenschutz",
     "login": "Anmelden",
     "logout": "Abmelden",
-    "members_interval": "(0){ keine Mitglieder};(1){ ein Mitglied};(2-inf){ {{count}} Mitglieder}",
+    "members_interval": "(0)[ keine Mitglieder];(1)[ ein Mitglied];(2-inf)[ {{count}} Mitglieder]",
     "more": "Mehr",
     "name": "Name",
     "new": "Neu",
