--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -14,7 +14,7 @@
     "billing_address": "Billing address",
     "blog_entry": "Blog article for activity",
     "count": "Count",
-    "count_participants_interval": "(0){So far, there are no participants.};(1){So far, there is one participant.};(2-inf){So far, there are {{count}} participants.}",
+    "count_participants_interval": "(0)[So far, there are no participants.];(1)[So far, there is one participant.];(2-inf)[So far, there are {{count}} participants.]",
     "create": "Create activity",
     "created_by": "Created by",
     "delete": "Delete activity",
@@ -241,7 +241,7 @@
     "legal_notice": "Legal Notice and Privacy Declaration",
     "login": "Log in",
     "logout": "Log out",
-    "members_interval": "(0){ no members};(1){ one member};(2-inf){ {{count}} members}",
+    "members_interval": "(0)[ no members];(1)[ one member];(2-inf)[ {{count}} members]",
     "more": "More",
     "name": "Name",
     "new": "New",
