feat: use more inclusive language
This replaces the term Softwarecraftman with a more inclusive term.

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -185,7 +185,7 @@
     "about_us_text": [
       "h4 Über uns",
       "p.",
-      "  Die Softwerkskammer hat sich 2011 gegründet, um den Austausch Interessierter zum Thema Software Craftsmanship",
+      "  Die Softwerkskammer hat sich 2011 gegründet, um den Austausch Interessierter zum Thema Software Craft und Testing",
       "  zu vereinfachen.",
       "p.",
       "  Hierüber organisieren die lokalen Communities (die Softwerkskammern) ihre Treffen und andere Events wie",
@@ -200,7 +200,7 @@
     "back": "Zurück",
     "cancel": "Abbrechen",
     "close": "Schließen",
-    "communities": "Software Craftsmanship Communities in Deutschland, Österreich und der Schweiz.",
+    "communities": "Software Craft und Testing Communities in Deutschland, Österreich und der Schweiz.",
     "compare": "Vergleichen",
     "create": "Anlegen",
     "credits": "Credits",
